ajout class text-center

--- a/index.html
+++ b/index.html
@@ -69,26 +69,26 @@
         </div>
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
-            <div class="h4 mt-0 title">Informations Personnelles</div>
+            <div class="h4 mt-0 title text-center">Informations Personnelles</div>
             <div class="row">
               <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-              <div class="col-sm-8">34</div>
+              <div class="col-sm-8 text-center">34</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-              <div class="col-sm-8">berrichif0717@gmail.com</div>
+              <div class="col-sm-8 text-center">berrichif0717@gmail.com</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Mobile:</strong></div>
-              <div class="col-sm-8">07-52-75-59-23</div>
+              <div class="col-sm-8 text-center">07-52-75-59-23</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Addresse:</strong></div>
-              <div class="col-sm-8">175, Avenue de Clichy,75017, Paris</div>
+              <div class="col-sm-8 text-center">175, Avenue de Clichy,75017, Paris</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Langues:</strong></div>
-              <div class="col-sm-8">Français,Arabe,Anglais</div>
+              <div class="col-sm-8 text-center">Français,Arabe,Anglais</div>
             </div>
           </div><!--fin partie informations personnelles-->
         </div>
