changement fichier portfolio

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <div class="col-md-6">
             <div class="progress-container progress-dark"><span class="progress-badge">Jquery</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0%;"></div><span class="progress-value"></span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
               </div>
             </div>
           </div>
@@ -274,11 +274,11 @@
                       <p>Developpment Web responsive</p>
                     </figcaption>
                   </figure></a></div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://faith-oran.github.io/Projet-Groupe1-EntrepriseDumert/index.html" target="_blank">
-                  <figure class="cc-effect"><img src="images/mock-up2.png" alt="Image-mock-up"/>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://faith-oran.github.io/projet-JavaScript-jeu/" target="_blank">
+                  <figure class="cc-effect"><img src="images/mock-up6.jpg" alt="Image-mock-up"/>
                     <figcaption>
-                      <div class="h4">Projet groupe "Dumert construction" </div>
-                      <p>Developpment web for Desktop</p>
+                      <div class="h4">Projet jeu Devinette avec Js </div>
+                      <p>Developpment web </p>
                     </figcaption>
                   </figure></a></div>
             </div>
