modification compétences et cv pdf

--- a/index.html
+++ b/index.html
@@ -101,147 +101,166 @@
     <div class="h4 text-center mb-4 title">Compétences</div>
     <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
       <div class="card-body">
+        <div class="col-md-12 " style="text-decoration: underline;">
+          <div class="h5">Front-end</div>
+        </div>
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6 col-6">
             <div class="progress-container progress-dark"><span class="progress-badge">HTML</span>
-              <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
-              </div>
+            <!--  <div class="progress">
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0;"></div><span class="progress-value"></span>
+              </div>-->
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 col-6">
             <div class="progress-container progress-dark"><span class="progress-badge">CSS</span>
-              <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
-              </div>
+              <!-- <div class="progress">
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: ;"></div><span class="progress-value"></span>
+              </div>-->
             </div>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6 col-6">
             <div class="progress-container progress-dark"><span class="progress-badge">SASS</span>
-              <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
-              </div>
+               <!--<div class="progress">
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:;"></div><span class="progress-value"></span>
+              </div>-->
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 col-6">
             <div class="progress-container progress-dark"><span class="progress-badge">BOOTSTRAP</span>
-              <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
-              </div>
+             <!-- <div class="progress">
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: ;"></div><span class="progress-value"></span>
+              </div>-->
             </div>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6 col-6">
             <div class="progress-container progress-dark"><span class="progress-badge">JAVASCRIPT</span>
-              <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%;"></div><span class="progress-value">60%</span>
-              </div>
+              <!--<div class="progress">
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:;"></div><span class="progress-value"></span>
+              </div>-->
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 col-6">
             <div class="progress-container progress-dark"><span class="progress-badge">Jquery</span>
-              <div class="progress">
+              <!--<div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
-              </div>
+              </div>-->
             </div>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6">
+         <!-- <div class="col-md-6">
             <div class="progress-container progress-dark"><span class="progress-badge">Angular</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0%;"></div><span class="progress-value"></span>
               </div>
             </div>
-          </div>
-          <div class="col-md-6">
+          </div>-->
+          <div class="col-md-6 col-6">
             <div class="progress-container progress-dark"><span class="progress-badge">React</span>
-              <div class="progress">
+              <!--<div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0%;"></div><span class="progress-value"></span>
-              </div>
+              </div>-->
             </div>
           </div>
         </div>
+        <hr>
+        <div class="col-md-12 " style="text-decoration: underline;">
+          <div class="h5">Back-end(en cours)</div>
+        </div>
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6 col-6">
             <div class="progress-container progress-dark"><span class="progress-badge">PHP</span>
-              <div class="progress">
+              <!--<div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0%;"></div><span class="progress-value"></span>
-              </div>
+              </div>-->
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 col-6">
             <div class="progress-container progress-dark"><span class="progress-badge">SQL</span>
-              <div class="progress">
+              <!--<div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0%;"></div><span class="progress-value"></span>
-              </div>
+              </div>-->
             </div>
           </div>
         </div>
+        <hr/>
+        <div class="col-md-12  " style="text-decoration: underline;">
+          <div class="h5">Versioning</div>
+        </div>
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6 col-6">
             <div class="progress-container progress-dark"><span class="progress-badge">Git Bach</span>
-              <div class="progress">
+              <!--<div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
-              </div>
+              </div>-->
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 col-6">
             <div class="progress-container progress-dark"><span class="progress-badge">Github</span>
-              <div class="progress">
+              <!--<div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
-              </div>
+              </div>-->
             </div>
           </div>
         </div>
+        <hr/>
+        <div class="col-md-12  " style="text-decoration: underline;">
+          <div class="h5">Cms</div>
+        </div>
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6 col-6">
             <div class="progress-container progress-dark"><span class="progress-badge">WORDPRESS</span>
-              <div class="progress">
+              <!--<div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
-              </div>
+              </div>-->
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 col-6">
             <div class="progress-container progress-dark"><span class="progress-badge">Squarespace</span>
-              <div class="progress">
+             <!-- <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div><span class="progress-value">50%</span>
-              </div>
+              </div>-->
             </div>
           </div>
         </div>
+        <hr/>
+        <div class="col-md-12 " style="text-decoration: underline;">
+          <div class="h5">Logiciels de création graphique et maquettage</div>
+        </div>
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6 col-6">
             <div class="progress-container progress-dark"><span class="progress-badge">Photoshop</span>
-              <div class="progress">
+              <!--<div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:90%;"></div><span class="progress-value">90%</span>
-              </div>
+              </div>-->
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 col-6">
             <div class="progress-container progress-dark"><span class="progress-badge">Illustrator</span>
-              <div class="progress">
+             <!-- <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
-              </div>
+              </div>-->
             </div>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6 col-6">
             <div class="progress-container progress-dark"><span class="progress-badge">Indesign</span>
-              <div class="progress">
+              <!--<div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:80%;"></div><span class="progress-value">80%</span>
-              </div>
+              </div>-->
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 col-6">
             <div class="progress-container progress-dark"><span class="progress-badge">XD</span>
-              <div class="progress">
+              <!--<div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">70%</span>
-              </div>
+              </div>-->
             </div>
           </div>
         </div>
