--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="card-body">
             <div class="h4 mt-0 title">Profil</div>
             <p>Actuellement en formation "développment web fullstack" chez "Descodeuses",</p>
-            <p>je suis à la recherche d'un stage en développement web d'une durée de 6mois à partir de mi-juillet.
+            <p>je suis à la recherche d'un stage en développement web d'une durée de 6 mois à partir de mi-juillet.
               Je souhaite mettre mes compétences et ma créativité au service de l'entreprise qui m'accueillera.</p>
           </div>
         </div>
@@ -83,7 +83,7 @@
               <div class="col-sm-8 text-center">07-52-75-59-23</div>
             </div>
             <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Addresse:</strong></div>
+              <div class="col-sm-4"><strong class="text-uppercase">Adresse:</strong></div>
               <div class="col-sm-8 text-center">175, Avenue de Clichy,75017, Paris</div>
             </div>
             <div class="row mt-3">
