--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/ma-photo.jpg" alt="Image faiza"/></a></div>
           <div class="h2 title">Faiza Berrichi</div>
-          <p class="category text-white">Developpeuse web,Infographe</p><a class="btn btn-dark smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contactez-moi</a><a class="btn btn-dark" href="images/cv_Faiza_dev.pdf" download="images/cv_Faiza_dev.pdf" target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">télécharger le CV</a>
+          <p class="category text-white">Developpeuse web,Infographe</p><a class="btn btn-dark smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contactez-moi</a><a class="btn btn-dark" href="images/cv_Faiza_New.pdf" download="images/cv_Faiza_New.pdf" target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">télécharger le CV</a>
         </div>
       </div>
       <div class="section">
