--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               j'étais  graphiste et gestionnaire d'une agence de publicité  pendant plus de 7 ans.<br>
               Par la suite, je me suis dirigée vers le domaine de la programmation informatique , j'ai fait une formation professionnelle
               dans le développement web et mobile.<br> 
-              Je suis actuellement en stage, de fin de formation "Développment web et web mobile" à BnpParibas.<br> 
+              J'ai fait un stage de fin de formation "Développment web et web mobile" à BnpParibas.<br> 
               J'ai acquis plusieurs compétences durant mes 7 années d'éxpérience dans le domaine du graphisme et pendant ma formation et mon stage 
               dans le développement web(Analyse des besoins client, méthode agile, maquettage, UX/UI design, responsive, Javscript, Jquery, React, Php, Sql, MySql, git) </p>
           </div>
